# android-local-vpn

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build-master.yml  master.yml  release.yml
configs/vscode/: launch.json
scripts/: .gitignore  add-tun.sh  remove-tun.sh  run-debugger.sh
source/: build.gradle  settings.gradle
source/android/: build.gradle  gradle.properties  settings.gradle
source/app/: build.gradle  (+1 more)
source/vpn/src/main/rust/vpn/: .rustfmt.toml  Cargo.toml  vpn.rs
source/vpn/src/main/rust/vpn/src/: lib.rs  socket_protector.rs  std_ext.rs  vpn.rs
source/vpn/src/main/rust/vpn/src/smoltcp_ext/: wire.rs
source/vpn/src/main/rust/vpn/src/socket_protector/: mod.rs  socket_protector.rs
source/vpn/src/main/rust/vpn/src/std_ext/: fs.rs  str.rs
source/vpn/src/main/rust/vpn/src/utils/: jni.rs  macros.rs  mod.rs  service.rs
source/vpn/src/main/rust/vpn/src/vpn/: channel_types.rs  channel_utils.rs  ip_layer_processor.rs  mio_helper.rs  mod.rs  mpsc_helper.rs  packet_helper.rs  session.rs  session_data.rs  session_manager.rs  tcp_layer_processor.rs  vpn.rs  vpn_device.rs
source/vpn/src/main/rust/vpn/src/vpn/channel/: mod.rs  utils.rs
source/vpn/src/main/rust/vpn/src/vpn/ip_layer/: channel.rs  packet_parser.rs  processor.rs
source/vpn/src/main/rust/vpn/src/vpn/session/: mod.rs  session.rs  session_manager.rs
source/vpn/src/main/rust/vpn/src/vpn/session_manager/: mod.rs  session_data.rs  session_manager.rs
source/vpn/src/main/rust/vpn/src/vpn/tcp_layer/: channel.rs  mod.rs  processor.rs  session_data.rs
(+79 files in other folders)
