[package]
edition = "2018"
name = "vpn"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.10.1"
crossbeam = "0.8.1"
jni = {version = "0.19.0", default-features = false}
lazy_static = "1.4.0"
libc = "0.2.112"
log = "0.4.14"
mio = {version = "0.8", features = ["os-poll", "net", "os-ext"]}
smoltcp = {path = "../smoltcp", version = "0.8.0"}
