[package]
edition = "2021"
name = "vpn"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
actix = "0.13.0"
android_logger = "0.10.1"
crossbeam = "0.8.2"
jni = {version = "0.19.0", default-features = false}
lazy_static = "1.4.0"
libc = "0.2.131"
log = "0.4.17"
mio = {version = "0.8.2", features = ["os-poll", "net", "os-ext"]}
smoltcp = "0.8.1"
socket2 = "0.4.4"
